Fixed whitespace

--- a/style.scss
+++ b/style.scss
@@ -4,7 +4,7 @@ body{
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    box-shadow: inset 0 0 20px red;
+    margin-bottom: 150px;
 }
 img {
     min-width: 30px;
